# lcr-dataengineering-sql

./: README.md  environment.yml  pyproject.toml
code/: create_table.py  create_table_from_csv.py  csv_to_sql.py  generic.py  load_MOCHRD_PESSOA_FROM_REPO.py  load_csv_to_sql.py  multi_db_demo.py  ping.py  query.py  select_MOCHRD_PESSOA_FROM_REPO.py  struc_MOCHRD_PESSOA_FROM_REPO.py
example_actions/sql/: create_table_from_csv.py  create_table_raw.py  load_MOCHRD_PESSOA_FROM_REPO.py  load_data_from_csv.py  ping_db.py  struc_MOCHRD_PESSOA_FROM_REPO.py  truncate.py
src/lcr_dataengineering_sql/: config.py  config_multi.py  container.py  container_multi.py  db_utils.py  engine.py  session.py
src/lcr_dataengineering_sql/core/: ports.py
src/lcr_dataengineering_sql/features/: repo.py  repo_router.py
src/lcr_dataengineering_sql/infra/: sqlalchemy_db.py
src/lcr_dataengineering_sql/utils/: naming.py
