[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "lcr_dataengineering_sql"
version = "0.1.0"
description = "Pacote local para explorar SQL Server com SQLAlchemy + pyodbc"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=2.0",
  "pyodbc>=5.1",
  "python-dotenv>=1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/lcr_dataengineering_sql"]
